--- a/isaacssemugenyi/views/index.pug
+++ b/isaacssemugenyi/views/index.pug
@@ -12,6 +12,9 @@ block content
                             h5
                                 strong COVID-19(CORONA VIRUS)
                             h6.text-center Virus-Test Registration Form
+
+                    //- div(class="alert alert-success" role="alert" id="better")
+
                     div(class="form-row")
                         div(class="form-group col-md-6")
                             label(for="surname")
